<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textBoxLiveRun"
            android:id="@+id/textViewLiveRun"
            android:textColor="@android:color/black" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:id="@+id/switchLiveRun"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textBoxStreamingPortNumber"
            android:id="@+id/textViewStreamingPortNumber"
            android:textColor="@android:color/black" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextStreamingPortNumber"
            android:maxLength="5"
            android:text="@string/defaultStreamingPortNumber"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textBoxTopPixelStripNumber"
            android:id="@+id/textViewTopPixelStripNumber"
            android:textColor="@android:color/black"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextTopPixelStripNumber"
            android:maxLength="5"
            android:text="@string/defaultTopPixelStripNumber"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textBoxBottomPixelStripNumber"
            android:id="@+id/textViewBottomPixelStripNumber"
            android:textColor="@android:color/black"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextBottomPixelStripNumber"
            android:maxLength="5"
            android:text="@string/defaultBottomPixelStripNumber"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainButtonText"
            android:id="@+id/buttonMain"
            android:onClick="onMainButtonClick"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/textCopyright"
            android:id="@+id/textViewCopyright"
            android:textColor="#ff3f59ff"
            android:textIsSelectable="true"
            android:textStyle="italic"/>
    </LinearLayout>
</LinearLayout>
